<resources>
    <string name="app_name">Ramhacks</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_setup">SetupActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="fragments_array">
        <item>Welcome</item>
        <item>EEG</item>
        <item>Heart Rate</item>
        <item>Stress Monitor</item>
        <item>Mental Age Checker</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="heart_rate">-</string>
    <string name="default_text">--</string>
    <string name="picture">This is Picture</string>
    <string name="description_info">This is description Picture</string>
    <string name="intro_message">This is a string thing</string>
    <string name="blank_heartbeat">-</string>
    <string name="status"> status</string>
    <string name="refresh"> refresh</string>
    <string name="connect"> connect</string>
    <string name="disconnect"> disconnect</string>
    <string name="undefined"> undefined</string>
    <string name="eeg">EEG Data:</string>
    <string name="init_val"> init_val</string>
    <string name="muse_elem">Alpha:</string>
    <string name="version"> version</string>
    <string name="pause"> pause</string>

</resources>
